--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    // Java language implementation
+    implementation("androidx.activity:activity-ktx:1.6.0")
+    // Kotlin
+    implementation("androidx.activity:activity-ktx:1.6.0")
 }
