--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -46,4 +47,9 @@ dependencies {
     implementation("androidx.activity:activity-ktx:1.6.0")
     // Kotlin
     implementation("androidx.activity:activity-ktx:1.6.0")
+
+    def room_version = "2.4.2"
+
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
